--- a/Core/Container/Trees/Ravl.API.Core.Trees.html
+++ b/Core/Container/Trees/Ravl.API.Core.Trees.html
@@ -5,8 +5,8 @@
   </head>
 
   <body>
-    Various binary tree's and there iterators. If your unsure what to
-    use, the class AVLTreeC is recommended, its is self balancing and
-    will work well no mater what order data is presented to it.
+    Various binary trees and their iterators. If you are unsure which to
+    use, the class AVLTreeC is recommended: it is self balancing, and
+    will work well no matter what order data is presented to it.
   </body>
 </html>
