Added link to full list in RavlN.html Moved html to Base
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@6007 7226f50c-d813-0410-99bf-979b288ab488

--- a/Core/Base/Ravl.API.Core.Typedefs.html
+++ b/Core/Base/Ravl.API.Core.Typedefs.html
@@ -32,6 +32,8 @@
       <li><b>SizeT</b> - An unsigned integer which enough precision to represent the size of the largest array that can be created in a program on the machine.  </li>
       
     </ul>
+
+    <p>The full list is buried in <a href="../Class/RavlN.html">here</a>.</p>
     
   </body>
 </html>
