Found better doc link for RAVL typedefs
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@6012 7226f50c-d813-0410-99bf-979b288ab488

--- a/Core/Base/Ravl.API.Core.Typedefs.html
+++ b/Core/Base/Ravl.API.Core.Typedefs.html
@@ -33,7 +33,7 @@
       
     </ul>
 
-    <p>The full list is buried in <a href="../Class/RavlN.html">here</a>.</p>
+    <p>The full list is mostly <a href="../Class/RavlN.html#IntT">here</a>.</p>
     
   </body>
 </html>
