--- a/3D/Ravl.API.3D.html
+++ b/3D/Ravl.API.3D.html
@@ -2,7 +2,7 @@
 <html>
 <!--! children=Mesh;IO -->
   <head>
-    <title>3D Modeling</title>
+    <title>3D Modelling</title>
   </head>
 
   <body>
