--- a/Image/ImageIO/Ravl.API.Images.IO.html
+++ b/Image/ImageIO/Ravl.API.Images.IO.html
@@ -100,7 +100,7 @@ DP_REGISTER_CONVERSION(ImageC<ByteT>T2RealImageCT, 1);
 	number of bytes in the respective pixels) the amount of
 	information lost in the conversion.  In this example, no
 	information is lost, so the ratio is 1.  For double to char
-	conversion, the ration would be 8.</p>
+	conversion, the ratio would be 8.</p>
 
 </body>
 </html>
