Added link to virtual files
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@6095 7226f50c-d813-0410-99bf-979b288ab488

--- a/GUI/DPDisplay/Ravl.API.GUI.Data_Display.html
+++ b/GUI/DPDisplay/Ravl.API.GUI.Data_Display.html
@@ -8,7 +8,7 @@
     <p>Requires library <code>RavlDPDisplay</code></p>
     <hr>
     
-    <p>This library allows the IO mechanism to 'save' image data to the display.  The string "@X" is used in place of a file name.</p> 
+    <p>This library allows the IO mechanism to 'save' image data to the display.  The string "@X" is used in place of a file name.  "@X" is one of the <a href="Ravl.API.Core.IO.Virtual_Files.html">virtual files</a>.</p> 
 
     <p>To save individual images to the display, see <a href="../../../examples/exDPWindow.cc">this example</a>.</p>
 
