Tried to add some sanity to the Load/Save I/O doc
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@6100 7226f50c-d813-0410-99bf-979b288ab488

--- a/Core/IO/Ravl.API.Core.IO.Formats.html
+++ b/Core/IO/Ravl.API.Core.IO.Formats.html
@@ -12,7 +12,7 @@ Suppose we wish to load some data from a file.  The first question the
 program must ask is `What format is this data in ?'  There are two
 ways to approach this. The first is to fix or specify explicitly the
 format the file is in so the program knows what to expect. Second,
-we can attempt to identify the file automaticaly.
+we can attempt to identify the file automatically.
 
 <P>
 Having to prepare large data sets for a program can be a headache as
@@ -24,9 +24,9 @@ the user's life is made much easier if there are number of formats to
 choose from.
 
 <P>
-Unfortunaly identifying files is not always simple, and in some cases
+Unfortunately identifying files is not always simple, and in some cases
 it is actually impossible.  It is however possible to make very good
-guesses, and provide the user is given the option of specifing the
+guesses, and provide the user is given the option of specifying the
 format manually, it is a vast improvement over doing so for all
 operations.
 
