--- a/Core/IO/IOHacks.html
+++ b/Core/IO/IOHacks.html
@@ -11,7 +11,7 @@
     (or corresponding streaming system) but it complains at run time?  The
     problem is that QMake doesn't know which library to link, as the decision
     about which actual function to use is not made until run time.  So you
-    have to unclude the relevant library explicitly in <code>defs.mk</code>.
+    have to include the relevant library explicitly in <code>defs.mk</code>.
     But you don't know the library name - so what to do?  Sometimes the
     documentation will tell you, particularly if you are using image or video
     classes and files.  </p>
@@ -34,7 +34,7 @@
     <address><a href="mailto:w.christmas@surrey.ac.uk">Bill Christmas</a></address>
 <!-- Created: Thu Mar 15 17:36:48 GMT 2007 -->
 <!-- hhmts start -->
-Last modified: Mon Mar 19 18:14:11 GMT 2007
+Last modified: Mon Apr 16 11:24:25 BST 2007
 <!-- hhmts end -->
   </body>
 </html>
