--- a/Core/IO/Ravl.API.Core.IO.Type_Converter.html
+++ b/Core/IO/Ravl.API.Core.IO.Type_Converter.html
@@ -21,7 +21,7 @@ between the representation used by a file format and that used by the
 program.
 
 <P>
-The set of transformations known to the program can be throught of as a
+The set of transformations known to the program can be thought of as a
 graph, each node corresponding to a data representation, and the edges
 as transformations between them. The problem of finding the quickest
 way of converting one type to another becomes one of searching for
@@ -72,7 +72,7 @@ but in practice has provided satisfactory behaviour.
 With the use of templating the addition of new conversion can be made
 very easy.  As with processes described earlier only a single function
 need be defined. The following example defines the conversion from
-an interger to a floating point number, (defined as RealT in RAVL),
+an integer to a floating point number, (defined as RealT in RAVL),
 which loses no information and hence has a cost of one.
 
 <P>
