Installed example properly
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@6207 7226f50c-d813-0410-99bf-979b288ab488

--- a/Contrib/OpenCV/OpenCV.html
+++ b/Contrib/OpenCV/OpenCV.html
@@ -11,7 +11,8 @@
     <p>These functions provide a certain amount of functionality for
     transforming between RAVL and OpenCV image formats.  The relevant OpenCV
     headers and libraries are automatically included when you include the
-    <code>RavlOpenCV</code> library.  See functions below for usage.</p>
+    <code>RavlOpenCV</code> library.  See functions below and <a
+    href="../../Examples/exOpenCV.cc.html">example</a> for usage.</p>
 
     <p>
 </p>
