Link to OpenCV doc
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@6236 7226f50c-d813-0410-99bf-979b288ab488

--- a/Contrib/OpenCV/OpenCV.html
+++ b/Contrib/OpenCV/OpenCV.html
@@ -14,7 +14,7 @@
     <code>RavlOpenCV</code> library.  See functions below and <a
     href="../../Examples/exOpenCV.cc.html">example</a> for usage.</p>
 
-    <p>
-</p>
+    <p><a href="http://opencvlibrary.sourceforge.net/">The OpenCV manual</a></p>
+
   </body>
 </html>
