Hopefully fixed the problems caused by the previous QMake changes
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@6264 7226f50c-d813-0410-99bf-979b288ab488

--- a/QMake/Ravl.QMake.html
+++ b/QMake/Ravl.QMake.html
@@ -20,7 +20,7 @@
     basic checks such as array bound violations.  It will use (and optionally
     create) static libraries. </p>
 
-    <p>There are <a href="../../../QMake/Help.txt">various other QMake
+    <p>There are <a href="../../../html/Help.txt">various other QMake
     command-line options</a> you can use, e.g.: </p>
 
       <ul>
@@ -35,10 +35,8 @@
       libraries in your executable (e.g. <code>qm shared</code>, <code>qm
       optshared</code>).</li>
 
-      <li>You can list the <a href="../../../QMake/Help.txt"> command-line
-      options</a> at any time by typing <code> qm help</code>.  <code><a
-      href="../../../QMake/Notes.txt">qm notes</a> </code> will generate a few
-      more hints. </li>
+      <li>You can list the command-line options at any time by typing <code>
+      <a href="../../../html/Help.txt"> qm help</a></code>.  </li>
     </ul>
 
     <h2>The "defs.mk" file</h2>
