--- a/Image/Ravl.API.Images.Converters.html
+++ b/Image/Ravl.API.Images.Converters.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-    <title>Image conversion functions</title>
+    <title>Explicit image conversion functions</title>
   </head>
   <body>
   </body>
