--- a/Core/Container/Array/Ravl.API.Core.Arrays.html
+++ b/Core/Container/Array/Ravl.API.Core.Arrays.html
@@ -1,20 +1,26 @@
-! children="1D;2D;3D;Buffer"
-: 1,2 and 3 Dimensional Arrays
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+  <head>
+    <title>Single- and Multi-dimensional Arrays</title>
+    <!--! children="1D;2D;3D;HigherD;Buffer" -->
+  </head>
 
-RAVL arrays provide a more flexible and user-friendly substitute for the
-traditional C-style arrays.  RAVL arrays are dynamically-allocated, and are
+  <body>
+    <p>RAVL arrays provide a more flexible and user-friendly substitute for the
+traditional C-style arrays.  RAVL arrays are dynamically allocated, and are
 "big" objects - i.e. they are reference-counted (see <a
 href="Ravl.Introduction.Reference_Counting.html">Reference Counting</a>).
-
+</p>
 
 <p>There are two types of array provided in RAVL: regular arrays and simple
-arrays.  If you're not sure which to use, stick with the regular ones.
+arrays.  If you're not sure which to use, stick with the regular ones.</p>
+
 
 <menu> 
 
 <li><b>Regular arrays:</b> These have indices that can have any lower and upper
 bound.  The templates are: <a href="../Class/RavlN.Array1dC.html">Array1dC</a>, <a href="../Class/RavlN.Array2dC.html">Array2dC</a>, ..., from which various 
-templated varieties are derived. For faster iterating over arrays, the simple 
+templated varieties are derived. For faster iterating over arrays, the regular 
 arrays also have some special iterator classes: <a href="../Class/RavlN.Array1dIterC.html">Array1dIterC</a>, <a href="../Class/RavlN.Array1dIter2C.html">Array1dIter2C</a>,
 <a href="../Class/RavlN.Array2dIterC.html">Array2dIterC</a>, ...  See under the appropriate array type for more details.
 
@@ -28,6 +34,13 @@ arrays also have some special iterator classes: <a href="../Class/RavlN.SArray1d
 </menu>
 
 
-</body>
-</html>
 
+
+    <hr>
+    <address><a href="mailto:w.christmas@surrey.ac.uk">Bill Christmas</a></address>
+<!-- Created: Wed Dec 19 12:32:57 GMT 2007 -->
+<!-- hhmts start -->
+Last modified: Wed Dec 19 12:35:55 GMT 2007
+<!-- hhmts end -->
+  </body>
+</html>
