--- a/GUI/DPDisplay/Ravl.API.GUI.Data_Display.html
+++ b/GUI/DPDisplay/Ravl.API.GUI.Data_Display.html
@@ -8,9 +8,13 @@
     <p>Requires library <code>RavlDPDisplay</code></p>
     <hr>
     
-    <p>This library allows the IO mechanism to 'save' image data to the display.  The string "@X" is used in place of a file name.  "@X" is one of the <a href="Ravl.API.Core.IO.Virtual_Files.html">virtual files</a>.</p> 
 
-    <p>To save individual images to the display, see <a href="../../../examples/exDPWindow.cc">this example</a>.</p>
+    <h2> Displaying images and image sequences using the "@X" virtual file</h2>
+
+    <p>This library allows the IO mechanism to 'save' image data to the display.  The string "@X" is used in place of a file name:</p>
+    <pre>  Save("@X", img);</pre>
+
+    <p>"@X" is one of the <a href="Ravl.API.Core.IO.Virtual_Files.html">virtual files</a>.  For a complete example, see <a href="../../../examples/exDPWindow.cc">here</a>.  Use the middle mouse button and the mouse wheel to move and rescale the image in the window.</p>
 
     <p>It can also be used to display a sequence of images via the RAVL streaming mechanism.  Thus if you want to output a series of images to the display, the constructor might be invoked as:</p>
 <pre>
@@ -21,12 +25,37 @@
   }
 </pre>
     <p>To give the window a label "Images", invoke it like this:</p>
-    <pre>  if(!OpenOSequence(outp,"@X:Images")) {
+    <pre>  Save(outp,"@X:Images", img)
 </pre>
 
     <p>If you would like to display several images in separate windows, use different labels: <code>@X:Image1</code>, <code>@X:Image2</code> etc.</p>
 
-<p>  Normally repeated saves to the same window will replace its contents, if you want to accumulate the results of processing in a window you can use <B>@XA</B>.
+    <h2>Adding things to images  using the "@XA" virtual file</h2>
+
+    <p>  Normally repeated saves to the same window will replace its contents, if you want to accumulate the results of processing in a window you can use <B>"@XA"</B>.  This is relevant if you want for example to add graphics to an image.  There are two approaches to adding graphics:</p><ol>
+      <li><p>You can draw graphical objects onto the image object using these <a href="Ravl.API.Images.Drawing.html">pixel-based drawing functions</a>.</p></li>
+
+      <li><p>You can instead draw the graphical objects to the display itself.
+      The main differences are:</p><ul> 
+
+          <li><p>Since the objects are no longer part of the image itself, when
+          you rescale the display (using the mouse wheel), the widths of the
+          lines that render the objects remain at the same scale (2 screen
+          pixels).  I.e. they no longer become pixellated as you blow the
+          image up.</p></li>
+
+          <li><p>The objects can be placed with sub-pixel accuracy.  In this
+          regard, it is worth noting that the coordinate system is subtly
+          different.  For example if a point has integer coordinates, it will
+          be placed at the top left-hand corner of the corresponding pixel.
+          The pixel-based drawing functions on the other hand are placed
+          relative to the centre of the pixel.</p>  </li>
+
+        </ul>
+        <p>Hints as to which objects can be drawn this way are <a
+        href="Ravl.API.GUI.Markup_Canvas.html">here</a>.</p>
+      </li>
+    </ol>
 
   </body>
 </html>
