Added description of colours
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@6545 7226f50c-d813-0410-99bf-979b288ab488

--- a/GUI/DPDisplay/Ravl.API.GUI.Data_Display.html
+++ b/GUI/DPDisplay/Ravl.API.GUI.Data_Display.html
@@ -65,7 +65,8 @@
       <li> <p>Because the virtual file
     system was not designed with this application in mind, you do not have
     much control over the appearance of the objects.  For example colours are
-    assigned in an arbitrary (but deterministic) order.  If you want several
+    assigned in a fixed order (red, green, blue, magenta, cyan, yellow, and
+    the rest in white).  If you want several
     objects plotted in the same colour, they have to be plotted in the same
     <code>Save()</code> call.</p></li>
 
@@ -74,7 +75,7 @@
         
         <pre>  $RAVL_INSTALLATION/bin/conv -lc | grep DPDisplay</pre>
       </li>
-</ul>
+    </ul>
 
   </body>
 </html>
