More comment about colours
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@6546 7226f50c-d813-0410-99bf-979b288ab488

--- a/GUI/DPDisplay/Ravl.API.GUI.Data_Display.html
+++ b/GUI/DPDisplay/Ravl.API.GUI.Data_Display.html
@@ -68,7 +68,8 @@
     assigned in a fixed order (red, green, blue, magenta, cyan, yellow, and
     the rest in white).  If you want several
     objects plotted in the same colour, they have to be plotted in the same
-    <code>Save()</code> call.</p></li>
+    <code>Save()</code> call.  However the colours can be changed subsequently 
+    in the display using the layer editor</p></li>
 
       <li><p>The only simple way to find out what kind of objects can be
       plotted (if on a Unix-type system) is to run: </p> 
