--- a/GUI/DPDisplay/Ravl.API.GUI.Data_Display.html
+++ b/GUI/DPDisplay/Ravl.API.GUI.Data_Display.html
@@ -29,6 +29,12 @@
 
     <p>If you would like to display several images in separate windows, use different labels: <code>@X:Image1</code>, <code>@X:Image2</code> etc.</p>
 
+
+    <h2>Resetting the image coordinates</h2>
+
+    <p>If you want to reset the coordinates of the display each time a new image is sent, use "@XR" in place of "@X".  This is useful if you are displaying a series of images with different coordinate systems.  For example you might be displaying a sequence of sub-images, each taken from a different part of the original image.</p>
+
+
     <h2>Adding graphical objects to images  using the "@XA" virtual file name</h2>
 
     <p> Normally repeated saves to the same window will replace its contents.
