--- a/GUI/DPDisplay3d/Ravl.API.GUI.Data_Display_3d.html
+++ b/GUI/DPDisplay3d/Ravl.API.GUI.Data_Display_3d.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-    <title>3d data display window</title>
+    <title>3D data display window</title>
   </head>
 
   <body>
@@ -9,14 +9,14 @@
     <hr>
     
 
-    <h2> Displaying 3d objects and sequences using the "@GL" virtual file</h2>
+    <h2> Displaying 3D objects and sequences using the "@GL" virtual file</h2>
 
-    <p>This library allows the IO mechanism to 'save' 3d data to the display.  The string "@GL" is used in place of a file name:</p>
+    <p>This library allows the IO mechanism to 'save' 3D data to the display.  The string "@GL" is used in place of a file name:</p>
     <pre>  Save("@GL", cube);</pre>
 
     <p>"@GL" is one of the <a href="Ravl.API.Core.IO.Virtual_Files.html">virtual files</a>.  For a complete example, see <a href="../../../examples/exDPWindow3d.cc">here</a>.   Use the middle mouse button and the mouse wheel to move and rescale the image in the window.</p>
 
-    <p>It can also be used to display a sequence of 3d objects via the RAVL streaming mechanism.  Thus if you want to output a series of images to the display, the constructor might be invoked as:</p>
+    <p>It can also be used to display a sequence of 3D objects via the RAVL streaming mechanism.  Thus if you want to output a series of images to the display, the constructor might be invoked as:</p>
 <pre>
   DPOPortC<TriMeshC > outp;
   if(!OpenOSequence(outp,"@GL")) {
@@ -30,7 +30,7 @@
     <p>If you would like to display several images in separate windows, use different labels: <code>@GL:Cube1</code>, <code>@X:Cube2</code> etc.</p>
 
 
-    <h2>Adding 3d objects to images  using the "@GLA" virtual file name</h2>
+    <h2>Adding 3D objects to images  using the "@GLA" virtual file name</h2>
 
     <p> Normally repeated saves to the same window will replace its contents.
     However if you want to accumulate the results of processing in a window
