Added some "clarification"
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@6694 7226f50c-d813-0410-99bf-979b288ab488

--- a/GUI/GTK/tutorial.html
+++ b/GUI/GTK/tutorial.html
@@ -49,25 +49,27 @@
 
 <h1> The GUI mechanism in RAVL </h1>
 
-    <p> In Ravl, the GUIs are run as a separate thread from the
-    program that creates them.  The program thread may contain various
-    commands for the GUI (add a row to a CList, move the cursor,
-    etc.).  These commands are added to a queue, and the GUI thread
-    executes them.  Thus in some of the GUI classes, you will see that
-    there are two versions of some of the methods.  For example in <a
-    href="../Auto/Basic/Class/RavlGUIN.ButtonC.html">ButtonC</a> there
-    are methods <code>ButtonC::SetLabel</code> and
-    <code>ButtonC::GUISetLabel</code>.  <code>SetLabel</code> is the
-    one you use in the main program.  It will cause a request for
-    <code>GUISetLabel</code> to be added to the queue.  When the GUI
-    thread reaches this function, the text will be added to the
-    button.
+    <p> In Ravl, the GUI callback routines are run as a separate thread from
+    the program that creates them.  The program thread may contain various
+    commands for the GUI (add a row to a CList, move the cursor, etc.).  These
+    commands are added to a queue, and the GUI thread executes them.  One
+    reason why this is important is that in some of the GUI classes, you will
+    see that there are two versions of some of the methods.  For example in <a
+    href="../Auto/Basic/Class/RavlGUIN.ButtonC.html">ButtonC</a> there are
+    methods <code>ButtonC::SetLabel()</code> and
+    <code>ButtonC::GUISetLabel()</code>.  <code>SetLabel()</code> is the one
+    you use in the main program.  It will cause a request for
+    <code>GUISetLabel()</code> to be added to the execution queue.  When the
+    GUI thread reaches this function, the text will be added to the button.
+    If you need to invoke a widget method within a callback routine, use the
+    "GUI" version instead, i.e. in this case
+    <code>ButtonC::GUISetLabel()</code>.
 </p>
     <hr>
     <address><a href="mailto:w.christmas@ee.surrey.ac.uk">Bill Christmas</a></address>
 <!-- Created: Fri Dec 20 12:05:17 GMT 2002 -->
 <!-- hhmts start -->
-Last modified: Tue Jan 21 16:56:09 GMT 2003
+Last modified: Wed Apr  2 14:57:07 BST 2008
 <!-- hhmts end -->
   </body>
 </html>
