Reorganised GUI doc tree
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@6702 7226f50c-d813-0410-99bf-979b288ab488

--- a/Ravl.API.html
+++ b/Ravl.API.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-    <!--! children="Core;Images;OS;Math;Pattern Recognition;Audio;3D;Logic;GUI;Source Tools" -->
+    <!--! children="Core;Images;OS;Math;Pattern Recognition;Audio;3D;Logic;Graphics;Source Tools" -->
     <title>Class/function reference / Application Program Interface</title>
   </head>
   
