--- a/Contrib/Plotting/DPGraph/Ravl.API.GUI.Data_Plotting.html
+++ b/Contrib/Plotting/DPGraph/Ravl.API.GUI.Data_Plotting.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<!--! docentry="Ravl.API.GUI.Data_Plotting" -->
+<!--! docentry="Ravl.API.Graphics.Graph Plotting.DPGraph" -->
 <html>
   <head>
     <title>Data Processing Graphing</title>
