--- a/Image/ImageIO/Ravl.API.Images.IO.html
+++ b/Image/ImageIO/Ravl.API.Images.IO.html
@@ -45,7 +45,7 @@ PROGLIBS = RavlImageIO ....
       <li><b>pbm</b> Bit image</li>
     </ul>
     
-    <p>By linking the RAVL library <b><code>RavlExtImgIO</code></b> which, uses various open source libraries you also get:</p>
+    <p>If you also link the <b><code>RavlExtImgIO</code></b> library, which in turn links to various open source libraries, you get (in addition to various video formats):</p>
     
     <ul>
       <li><b>jpeg</b> Lossy compressed images. Colour and grey scale. (Supports sequences stored in a single file.)</li>
