Put Phil McL's slides into RAVL repos & linked to RANSAC
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@6813 7226f50c-d813-0410-99bf-979b288ab488

--- a/Image/Processing/Tracking/Ravl.API.Images.Mosaic.html
+++ b/Image/Processing/Tracking/Ravl.API.Images.Mosaic.html
@@ -6,9 +6,7 @@
 
   <body>
 
-More information about Mosaicing can be found in this online presentation.
-    <a href="http://ravl.sourceforge.net/Presentations/Mosaic/talk.html"> (html) </a> or 
-    <a href="http://ravl.sourceforge.net/Presentations/Mosaic/talk.pdf"> pdf </a> 
+    <a href="../../../html/Optimisation.pdf"> Some information about some of the algorithms behind mosaicking </a>
 
     <hr>
  
