--- a/Math/Optimisation/Ravl.API.Math.Optimisation.html
+++ b/Math/Optimisation/Ravl.API.Math.Optimisation.html
@@ -70,5 +70,8 @@
 	 and provide examples for building optimisation routines using the
 	 above classes.
   </ol>
+
+  <p> <a href="../../../html/Optimisation.pdf"> Some more information about RANSAC and Levenberg-Marquardt</a>.</p>
+
   </body>
 </html>
